# Splitty

./: .gitignore  CMakeLists.txt  README.md  Splitty.cpp
timing/: Timer.cpp  Timer.h  TimerThread.cpp  TimerThread.h
util/: SplitUtils.cpp  SplitUtils.h  Timer.cpp  Timer.h
view/: SplitWindow.cpp  SplitWindow.h
